--- a/SpeakerStore/app/src/main/res/layout/activity_delete_product.xml
+++ b/SpeakerStore/app/src/main/res/layout/activity_delete_product.xml
@@ -26,7 +26,7 @@
     <GridView
         android:id="@+id/gvDeleteProduct"
         android:layout_width="match_parent"
-        android:layout_height="646dp"
+        android:layout_height="746dp"
         android:layout_marginStart="6dp"
         android:layout_marginEnd="6dp"
         android:paddingBottom="10dp"
@@ -34,8 +34,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarDelete"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
